added nekoweb follow button, updated github readme file

--- a/doqmeat/index.html
+++ b/doqmeat/index.html
@@ -99,10 +99,10 @@ you're free to take whatever you need from my site, but please refrain from taki
 			<a class="s" href="/sites">button wall</a>
 			<a class="s" href="/notebook">resources</a>
 			<a class="s outlink" href="https://doqmeat.atabook.org/">guestbook</a>
-			<a class="s outlink" href="https://neocities.org/site/doqmeat" target="_blank">neocities profile</a>
-			<a class="s outlink" title="github repository" href="https://github.com/doqmeat/doqmeat.com" target="_blank">source code</a>
 			<a class="s" href="sitemap.html">sitemap</a>
-			<iframe src="https://nekoweb.org/frame/follow" frameborder="0" width="170" height="28"></iframe>
+			<a class="s outlink" title="github repository" href="https://github.com/doqmeat/doqmeat.com" target="_blank">source code</a>
+			<a class="s outlink" href="https://neocities.org/site/doqmeat" target="_blank">neocities profile</a>
+			<a href="https://nekoweb.org/follow/doqmeat.com" class="s outlink">follow on nekoweb</a>
 		</nav>
 
 		<!-- pic log -->
@@ -169,8 +169,8 @@ you're free to take whatever you need from my site, but please refrain from taki
 					<p><span class="title">playing: </span> silksong, style savvy</p>
 					<p><span class="title">watching: </span> jojo (part 4), fallout (season 2)</p>
 					<p><span class="title">reading: </span> Computer Systems A Programmer's Perspective</p>
-					<p><span class="title">working on: </span> changing hosts!, thinking of a couple of pages that could use a rework, new f2u template</p>
-					<p class="date">last updated: 26.jan.26</p>
+					<p><span class="title">working on: </span> reworking iframe pages with the SSI feature of <a href="https://nekoweb" target="_blank">nekoweb</a>, new f2u template</p>
+					<p class="date">last updated: 28.jan.26</p>
 				</section>
 				<p id="notepad-notice">please turn on JS for this site omg... i promise i only use it for fun stuff.</p>
 				<section class="notepad-boxes" id="webrings">
