--- a/doqmeat/info/index.html
+++ b/doqmeat/info/index.html
@@ -54,9 +54,9 @@ edited with love by des
         <ul>
           <li>live since 11.apr.23 under <b>doqmeat.neocities.org</b></li>
           <li>under <mark>doqmeat.com</mark> since 24.mar.24!</li>
-          <li><b>hosting</b>: <a href="https://neocities.org" target="_blank">neocities</a></li>
+          <li><b>hosting</b>: <a href="https://neocities.org" target="_blank">neocities</a> (apr 2023 - jan 2026), <a href="https://nekoweb">nekoweb</a> (jan 2026 - ?)</li>
           <li><b>domain</b>: <a href="https://porkbun.com" target="_blank">porkbun</a></li>
-          <li>deployed to neocities via <a href="https://github.com/doqmeat/doqmeat.com" target="_blank" class="outlink">github</a></li>
+          <li>deployed to nekoweb via <a href="https://github.com/doqmeat/doqmeat.com" target="_blank" class="outlink">github</a></li>
         </ul>
       </div>
       <div id="credit" class="box">
@@ -72,7 +72,7 @@ edited with love by des
       </div>
       <div class="box" id="git">
         <h2>git updates</h2>
-        <p>commits from the <a href="" target="_blank">github repo</a></p>
+        <p>commits from the <a href="https://github.com/doqmeat/doqmeat.com/commits/main/" target="_blank">github repo</a></p>
         <div id="rss">
           <script src="//rss.bloople.net/?url=https%3A%2F%2Fgithub.com%2Fdoqmeat%2Fdoqmeat.com%2Fcommits.atom&limit=50&showtitle=false&type=js"></script>
         </div>
