added webfishing webring + credits for sitebox

--- a/doqmeat/index.html
+++ b/doqmeat/index.html
@@ -175,6 +175,8 @@ you're free to take whatever you need from my site, but please refrain from taki
 				<p id="notepad-notice">please turn on JS for this site omg... i promise i only use it for fun stuff.</p>
 				<section class="notepad-boxes" id="webrings">
 					<h3>webrings</h3>
+					<!-- webfishing -->
+					<script src="https://fleuraward.github.io/webfishring/webfish.setup.js"></script>
 					<!-- code collective -->
 					<center id="code-collective" style="display:block;margin-bottom:10px">
 						<span>This site is part of the</span> <a href="https://petrapixel.neocities.org/webring"><b>Code Collective</b></a>,<br>
