--- a/doqmeat/info/index.html
+++ b/doqmeat/info/index.html
@@ -111,6 +111,11 @@ edited with love by des
           <li>notepad bg pattern from <a href="http://sozaiya405.chu.jp/" target="_blank">sozaiya405</a></li>
         </ul>
 
+        <h2>nekoweb sitebox</h2>
+        <ul>
+          <li>bg pic by <a href="https://unsplash.com/@roscoadrian?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Adrian "Rosco" Stef</a> on <a href="https://unsplash.com/photos/green-grass-under-blue-sky-during-daytime-QN6ROsJCRHs?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a></li>
+        </ul>
+
         <h2>ARCHIVED - homepage v4 credits</h2>
         <ul>
           <li>FOUND IT! <a href="https://kalechips.net/projects/snippets/styleswitcher" target="_blank">style switcher</a> code</li>
