fixing path of layouts

--- a/doqmeat/info/archive.html
+++ b/doqmeat/info/archive.html
@@ -1,4 +1,4 @@
-<!--# layout file="layouts/info.html" -->
+<!--# layout file="~/layouts/info.html" -->
 <!--# block name="title" -->site update archive<!--# endblock -->
 <!--# block name="content" -->
 <p>i announce all of my updates through my <a href="/rss.xml">RSS feed</a> nowadays. sorry for the amount of broken links here... i'm always changing stuff around</p>
