--- a/doqmeat/info/index.html
+++ b/doqmeat/info/index.html
@@ -1,4 +1,4 @@
-<!--# layout file="layouts/info.html" -->
+<!--# layout file="~/layouts/info.html" -->
 <!--# block name="title" -->info<!--# endblock -->
 <!--# block name="content" -->
 <h2>sitely</h2>
