--- a/doqmeat/info/past-homepages.html
+++ b/doqmeat/info/past-homepages.html
@@ -1,4 +1,4 @@
-<!--# layout file="layouts/info.html" -->
+<!--# layout file="~/layouts/info.html" -->
 <!--# block name="title" -->homepage layouts archive<!--# endblock -->
 <!--# block name="content" -->
 <p>a place for me to showcase my previous layouts and my thoughts on them! click on the imgs to open them on a new tab.</p>
