--- a/doqmeat/info/past-layouts.html
+++ b/doqmeat/info/past-layouts.html
@@ -1,4 +1,4 @@
-<!--# layout file="layouts/info.html" -->
+<!--# layout file="~/layouts/info.html" -->
 <!--# block name="title" -->layouts<!--# endblock -->
 <!--# block name="content" -->
 <h2>landing pages</h2>
