--- a/doqmeat/info/git.html
+++ b/doqmeat/info/git.html
@@ -1,4 +1,4 @@
-<!--# layout file="layouts/info.html" -->
+<!--# layout file="~/layouts/info.html" -->
 <!--# block name="title" -->git<!--# endblock -->
 <!--# block name="content" -->
 <p>git commits from the <a href="https://github.com/doqmeat/doqmeat.com/commits/main/" target="_blank">github repo</a></p>
