--- a/doqmeat/sitemap.html
+++ b/doqmeat/sitemap.html
@@ -83,7 +83,7 @@
 				<li><a href="/learning/javascript/index.html" target="_parent">learning javascript</a></li>
 				<li><a href="/learning/python/index.html" target="_parent">learning python</a></li>
 			</ul>
-			<li><a href="/notebook" target="_parent">des' resources</a></li>
+			<li><a href="/notebook" target="_parent">notebook</a></li>
 			<ul>
 				<li><a href="/notebook/resources/index.html" target="_parent">links</a></li>
 				<li><a href="/notebook/resources/graphics.html" target="_parent">graphic collection</a></li>
@@ -103,7 +103,7 @@
 					<li><a href="/notebook/tutorials/rss/index.html" target="_parent">RSS feed</a></li>
 				</ul>
 			</ul>
-			<li><a href="/info" target="_parent">site info &amp; archive</a></li>
+			<li><a href="/info" target="_parent">info</a></li>
 			<li><a href="https://doqmeat.atabook.org/" target="_blank" class="outlink">guestbook</a></li>
 			<ul>
 				<li><a href="/guestbook/archive1.html">archived 123guestbook</a></li>
