--- a/doqmeat/info/updates.html
+++ b/doqmeat/info/updates.html
@@ -3,7 +3,7 @@
 <!--# block name="content" -->
 <p>i announce all of my updates through my <a href="/rss.xml">RSS feed</a> nowadays. sorry for the amount of broken links here... i'm always changing stuff around</p>
 <h2>past RSS</h2>
-<a href="RSS/1-RSS.xml">jul 2024 - jan 2026 feed</a>
+<p><a href="RSS/1-RSS.xml">jul 2024 - jan 2026 feed</a></p>
 <h2>non-RSS</h2>
 <details>
   <summary>2024</summary>
