minor updates, updated terminal reference sheet, and sitemap

--- a/doqmeat/index.html
+++ b/doqmeat/index.html
@@ -73,7 +73,7 @@ you're free to take whatever you need from my site, but please refrain from taki
 		<nav class="box">
 			<h3>personal</h3>
 			<a class="p" href="/about">about</a>
-			<a class="p" href="/photobook">photobook <img src="/!g/pix/updated1.gif" alt="updated page"></a>
+			<a class="p" href="/photobook">photobook</a>
 			<a class="p" href="/journal">journal</a>
 			<a class="p" href="/microblog">microblog</a>
 			<a class="p" href="/blog">blog <img src="/!g/pix/new1.gif" alt="new blog post"></a>
@@ -95,7 +95,7 @@ you're free to take whatever you need from my site, but please refrain from taki
 			<a class="o" href="/fish-love">fish love</a>
 
 			<h3>sitely</h3>
-			<a href="/info" class="s">info</a>
+			<a href="/info" class="s">info <img src="/!g/pix/new1.gif" alt="updated page"></a>
 			<a class="s" href="/sites">button wall</a>
 			<a class="s" href="/notebook">resources</a>
 			<a class="s outlink" href="https://doqmeat.atabook.org/">guestbook</a>
