--- a/doqmeat/learning/index.html
+++ b/doqmeat/learning/index.html
@@ -24,14 +24,14 @@
 			<p>(　o=^•ェ•)o　┏━┓ stuff i'm currently learning about, mostly related to coding. <a href="https://www.swyx.io/learn-in-public" target="_blank" class="outlink">insp</a></p>
 			<ul>
 				<li><a href="javascript/index.html">javascript</a></li>
-				<li><a href="bash/index.html">bash reference sheet</a> - when im a little stupid for the bash manuals so i have to make my own reference sheet for using my git bash terminal. also i just forget a lot of these commands.</li>
-				<li><a href="python/index.html">python</a> - archived. fuck python</li>
+				<li><a href="bash/index.html">terminal reference sheet</a> -i forget a lot of these commands.</li>
+				<li><a href="python/index.html">python</a> - archived. fuck python.</li>
 			</ul>
 		</main>
 		<footer>
 			<p>....... <a title="go back home" href="/">ᓚᘏᗢ home</a> .......</p>
 			<p> &hearts; all made with love by des &hearts;</p>
-			<p>last updated on 11.dec.25</p>
+			<p>last updated on 01.feb.26</p>
 			<p><b>credit</b>: <a href="/notebook/resources/fonts.html">fonts</a> used: bm-neko, mononoki, power pagedoll from fujimoto's <i>chainsaw man</i></p>
 		</footer>
 	</main>
