--- a/doqmeat/tv/index.html
+++ b/doqmeat/tv/index.html
@@ -18,11 +18,11 @@
 	<header>
 		<h1>tv log</h1>
 		<p>a place for me to ramble about shows that changed my life, display my physical DVD's collection, and do my favorite thing ever: make lists of things.</p>
-		<nav><b>navigation:</b> <a href="#mini-reviews">mini reviews</a> - <a href="#disks">blu-rays &amp; DVDs</a> - <a href="#letterboxd-rss">recently watched</a> - <a href="#lists">shows & anime</a></nav>
+		<nav><b>navigation:</b> <a href="#mini-reviews">logs</a> - <a href="#disks">blu-rays &amp; DVDs</a> - <a href="#letterboxd-rss">recently watched</a> - <a href="#lists">shows & anime</a></nav>
 	</header>
 	<main>
 
-		<h2 id="mini-reviews">mini reviews and recommendations</h2>
+		<h2 id="logs">logs</h2>
 
 		<div id="wrapper">
 
@@ -38,6 +38,19 @@
 				</div>
 			</div>
 			-->
+
+			<!-- <div class="show">
+				<div class="box">
+					<h2>fav movies watched in 2025</h2>
+					<ol>
+						<li><b>chainsaw man reze arc</b> <i>dir. tatsuya yoshihara</i></li>
+						<li><b>monster</b> <i>dir. hirokazu kore-eda</i></li>
+						<li><b>rec</b> <i>dir. jaume balagueró, paco plaza</i></li>
+						<li><b>the substance</b> <i>dir. coralie fargeat</i></li>
+					</ol>
+				</div>
+			</div> -->
+
 			<div class="show">
 				<div class="box">
 					<img src="!g/madoka.png" onmouseover="this.src='!g/madoka-rebellion/cover.png';" onmouseout="this.src='!g/madoka.png';" class="cover" alt="madoka magica anime cover">
@@ -116,7 +129,7 @@
 			<!--wrapper end div-->
 		</div>
 
-		<aside id="blu-ray">
+		<aside id="disks">
 			<img title="from the rebellion bluray box art, there's so many neat designs there!" class="pagedoll" src="assets/rebellion-pagedoll.png">
 			<h2>blu-rays &amp; DVDs</h2>
 			<p>as always, i try to get my favorite stuff physically. here's some awesome disks i own :p</p>
