added some buttons to sites, new fanlisting, updated some webrings and the body css for the homepage

--- a/doqmeat/index.html
+++ b/doqmeat/index.html
@@ -201,13 +201,13 @@ you're free to take whatever you need from my site, but please refrain from taki
 						<a href="https://peanits.lol/webrings/musicring/next.php?slug=doqmeat">next</a>
 						<br> -->
 					<!--			no AI webring-->
-					<map name="noaimini2">
-						<area href="https://baccyflap.com/noai" target="_blank" shape="rect" coords="5,3,83,14" alt="no ai webring" title="no ai webring">
-						<area href="https://baccyflap.com/noai/?prv&s=des" target="_top" shape="rect" coords="5,16,16,26" alt="previous" title="previous">
-						<area href="https://baccyflap.com/noai/?rnd" target="_top" shape="rect" coords="38,16,51,27" alt="random" title="random">
-						<area href="https://baccyflap.com/noai/?nxt&s=des" target="_top" shape="rect" coords="72,16,83,26" alt="next" title="next">
+					<map name="win7widget-compact">
+						<area href="https://baccyflap.com/noai" target="_blank" shape="rect" coords="0,0,216,29" alt="no ai webring" title="no ai webring">
+						<area href="https://baccyflap.com/noai/?prv&s=des" target="_top" shape="rect" coords="102,45,199,71" alt="previous" title="previous">
+						<area href="https://baccyflap.com/noai/?rnd" target="_top" shape="rect" coords="102,81,199,105" alt="random" title="random">
+						<area href="https://baccyflap.com/noai/?nxt&s=des" target="_top" shape="rect" coords="102,116,199,141" alt="next" title="next">
 					</map>
-					<img usemap="#noaimini2" src="https://baccyflap.com/noai/miniwidget2.gif" style="width: 88px; height: 31px" alt="a white rounded rectangle in red outline, with the words 'no ai webring'. there's a no access emoji, a little robot emoji, two arrows pointing left and right, and two crossed arrows">
+					<img usemap="#win7widget-compact" src="https://baccyflap.com/noai/win7widget-compact.gif" alt="a Windows 7 style dialog box titled 'The No AI Webring' with a little icon showing a computer chip in a rubbish bin. beside it are three clickable buttons, labeled Previous, Random and Next">
 
 					<!--		catfolk-->
 					<script src="https://snewberry.neocities.org/catfolk/webstring.js"></script>
@@ -245,6 +245,7 @@ you're free to take whatever you need from my site, but please refrain from taki
 				</section>
 				<section class="notepad-boxes" id="listings">
 					<h3>fanlistings</h3>
+					<a href="https://fan.enamour.nu/web" target="_blank"><img src="!g/web/fanlisting/web-design.png" alt="web design fanlisting"></a>
 					<a href="https://imaginary.nu/nikki/index.php" target="_blank"><img src="!g/web/fanlisting/infinity-nikki.png" alt="infinity nikki fanlisting"></a>
 					<a href="https://fan.leilukin.com/programming/" target="_blank"><img src="/!g/web/fanlisting/programming.png" alt="programming fanlisting"></a>
 					<a href="http://fanique.altervista.org/emoticons/" target="_blank"><img src="/!g/web/fanlisting/emoticons.png" alt="emoticons"></a>
