--- a/doqmeat/sites/index.html
+++ b/doqmeat/sites/index.html
@@ -186,7 +186,6 @@
 			<a title="velvet blue - a very sensire site" href="https://velvetblue.neocities.org/"><img src="https://files.catbox.moe/vltthb.png" alt="Velvet Blue"></a>
 			<a href="https://ajiyuu.neocities.org" target="_blank"><img src="!g/ajiyuu.jpeg" alt="ajiyuu"></a>
 			<a href="https://hat.neocities.org" target="_blank"><img src="!g/hat.gif" alt="hat"></a>
-			<a href="https://tsukinio.nekoweb.org" title="tsukinio" target="_blank"><img src="!g/tsukinio.gif" alt="tsukinio"></a>
 			<a href="https://zucchini.cc" target="_blank"><img src="!g/zucchini.gif" alt="zucchini.cc"></a>
 			<a href="https://nerucom.neocities.org" target="_blank"><img src="!g/nerucom.gif" alt="nerucom"></a>
 			<a title="virtuagirl" href="https://www.virtuagirl.net/" target="_blank"><img src="!g/virtuagirl.gif" alt="virtuagirl"></a>
@@ -247,7 +246,14 @@
 			<a href="https://projectc190.teacake.org/" target="_blank"><img src="!g/project190.gif" alt="projectc190"></a>
 			<a href="https://sunnytea.org/" target="_blank" rel="noopener noreferrer"><img src="!g/sunnytea.gif" alt="sunnytea"></a>
 			<a href="https://catgirls.mov" target="_blank"><img src="!g/catgirls.gif" alt="catgirls"></a>
+			<a href="https://snails.town/" target="_blank"><img src="!g/snails.town.png" alt="snails.town"></a>
+			<a href="https://summertime.nekoweb.org/" target="_blank"><img src="!g/summertime.gif" alt="summertime"></a>
+			<a href="https://tuesdaysplace.neocities.org" target="_blank"><img src="!g/tuesdaysplace.png" alt="tuesdaysplace"></a>
+			<a href="https://lydels.neocities.org/" target="_blank"><img src="!g/lydels.gif" alt="lydels"></a>
+			<a href="https://thecountrybat.com/" target="_blank"><img src="!g/thecountrybat.gif" alt="countrybat"></a>
 		</div>
+
+		<!-- new buttons ^^ -->
 
 		<a href="https://mewmiu.blog.fc2.com" target="_blank"><img src="https://blog-imgs-169.fc2.com/m/e/w/mewmiu/stamp.png"></a>
 
@@ -349,7 +355,7 @@
 		<p><a title="good resources for people who are new to making websites!" href="https://sadgrl.online/" target="_blank">sadgrl.online</a></p>
 
 		<h4 id="fansite">fansites / wikis</h4>
-		<a title="siinamota fansite owned by me!" href="https://siinamota.doqmeat.com" target="_blank"><img src="https://siinamota.doqmeat.com/info/!g/buttons/button1%20(1).png" alt="siinamota fansite"></a>
+		<a title="siinamota fansite owned by me!" href="https://siinamota.doqmeat.com" target="_blank"><img src="https://siinamota.doqmeat.com/_files/buttons/siinamotafansite88x31.png" alt="siinamota fansite"></a>
 		<a title="fansite for kpop group billlie" href="https://billlielove.neocities.org/" target="_blank"><img src="!g/billlielove.webp" alt="billlielove"></a>
 		<a href="https://read-nekojiru.neocities.org/"><img src="!g/read-nekojiru.gif" alt="read-nekojiru"></a>
 		<a href="https://frutigeraeroarchive.neocities.org" target="_blank"><img src="!g/frutigeraeroarchive.png" alt="frutigeraeroarchive"></a>
