added my favs from 2025 to a tv log

--- a/doqmeat/tv/index.html
+++ b/doqmeat/tv/index.html
@@ -27,7 +27,7 @@
 		<div id="wrapper">
 
 			<!--	TEMPLATE 
-						<div class="show">
+						<div class="log">
 				<img src="!g/">
 				<div class="hov">
 					<div class="box">
@@ -39,22 +39,30 @@
 			</div>
 			-->
 
-			<!-- <div class="show">
+			<div class="log">
 				<div class="box">
-					<h2>fav movies watched in 2025</h2>
-					<ol>
-						<li><b>chainsaw man reze arc</b> <i>dir. tatsuya yoshihara</i></li>
-						<li><b>monster</b> <i>dir. hirokazu kore-eda</i></li>
-						<li><b>rec</b> <i>dir. jaume balagueró, paco plaza</i></li>
-						<li><b>the substance</b> <i>dir. coralie fargeat</i></li>
-					</ol>
+					<h3>2025 favs</h3>
+					<h4>movies</h4>
+					<dl>
+						<dt><b>chainsaw man reze arc</b> <i>dir. tatsuya yoshihara</i></dt>
+						<dd>what a great experience this movie was. i watched it during the premiere and i loved seeing so many people in suits. the visuals, the <a title="2025 music recap - fav albums" href="/music/recaps/2025/index.html#lp" target="_blank">ost</a>, the sound design. there was SO so so much loved poured into this and you can tell with every frame. denji and reze's arc felt so much more devastating compared to the manga alone. just amazing.</dd>
+						<dt><b>monster</b> <i>dir. hirokazu kore-eda</i></dt>
+						<dd>a heartbreaking tale of two kids trying to figure themselves out while the people tells them they are monsters... i actually watched this movie because of someone made a parallel to <i>the summer hikaru died</i> and YEAH... it really is just like that. i cried so much during this.</dd>
+						<dt><b>rec</b> <i>dir. jaume balagueró, paco plaza</i></dt>
+						<dd>this movie was really fucking intense but it was also a really funny experience for me because of the fact that spanish is my native language and so every time they said some shit like <q>joder tio</q> i would just burst laughing. but in all seriousness i really did not expect to like this found footage film so much. which of all found footage movies i've watched, this might be one of the best ones. the story is so interesting from the start and <span class="spoiler">it eventually delves into something so much bigger than what we were initially exposed to.</span> i just really adored how this movie exposes us to the truth of what's happening bit by bit. it was a great watching experience.</dd>
+					</dl>
+					<h4>shows</h4>
+					<dl>
+						<dt><b>the summer hikaru died</b> <i>dir. ryōhei takeshita</i> </dt>
+						<dd>this anime kind of destroyed me. while watching i paid so much attention to the clear subtext of <b>hikaru</b> being in love with <b>yoshiki</b> and therefore the denial and the <i>monster</i> theming of the show. though while i really like to view it under these lens, i also really like the supernatural aspect of the show. very creepy and interesting! <br><br> i need to read the manga BADLY!!!</dd>
+					</dl>
 				</div>
-			</div> -->
+			</div>
 
-			<div class="show">
+			<div class="log">
 				<div class="box">
 					<img src="!g/madoka.png" onmouseover="this.src='!g/madoka-rebellion/cover.png';" onmouseout="this.src='!g/madoka.png';" class="cover" alt="madoka magica anime cover">
-					<h2 id="rebellion">madoka magica + rebellion</h2>
+					<h3 id="rebellion">madoka magica + rebellion</h3>
 					<p>to me, this is art.</p>
 					<p>when i first watched the <i>madoka magica</i> anime alongside <i>rebellion</i> around 2015 i was honestly just very confused and didn't get it all. it took me watching this series again when i was a bit older to really appreciate it. i loved the anime. the music, the witch segments animation. the DRAMA of it all. i am insanely in love with the artistry put into this. which feels a bit silly because i am after all talking about <b>madoka magica</b> but at this point idgaf.</p>
 					<p>and then came <i>rebellion</i> and elevated all of this to 100 times. i have watched this movie at least 10 times. i love it so so so much. homura akemi i would die for you.</p>
@@ -67,10 +75,10 @@
 				</div>
 			</div>
 
-			<div class="show">
+			<div class="log">
 				<div class="box">
 					<img src="!g/joeperatalkswithyou.png" alt="poster for joe pera talks with you" class="cover">
-					<h2>joe pera talks with you</h2>
+					<h3>joe pera talks with you</h3>
 					<p>i will never forget how it felt to get home at 2am from my ass retail job and just turning on the tv to put it in the background as i get ready to go to sleep. the last time i had watched tv i must have left it on <u>adult swim</u> because when i turn on my tv i was met with joe pera's show: <i>joe pera talks with you</i>. i don't know why but i could feel there was something very special about this show. i kinda just sat there mesmerized at the screen. it was an episode from its 2nd season, the one where <span class="spoiler">he writes his grandma an obituary....</span> i think maybe one of the reasons why i was so attached to the tv was because of how much i could relate to what was happening on the screen. i remember thinking <q>what will i do if my grandma ever dies?</q> ... i don't know. it just felt very genuine. and the episode really touched me. i decided to watch the rest of the show that week and i was not disappointed.</p>
 					<p>i think i love everything about this show, joe pera's vibe is just immaculate. i wish i was him. his relationship with sarah has such a sweetness to it. i am tearing up just thinking about them. while watching the show i remember thinking that i wanted to have what they have with someone else in the future. joe's relationship with his grandma ooooooouuuuuuughhhhh <img src="/!g/pix/catsob1.gif"> <img src="/!g/pix/catsob1.gif"> <img src="/!g/pix/catsob1.gif"> <img src="/!g/pix/catsob1.gif"> it really reminded me a lot of my relationship with <a title="blog post: remembering my grandma" href="/blog/2024/grandma/index.html">my grandma</a>. they would crank up jokes and tease each other. i really saw a lot of myself in this show. it's very special to me because of that. i think it's a show that really shows how important the small things in life are.</p>
 					<p>i was very sad when i got the news that the show got cancelled. though i do have to say that the ending of season 3 was wonderfully done. i rewatched it recently with my girlfriend and i couldn't help but sob when we finished watching it. now that my grandma passed away, i appreciate this show more than when i first watched it. i love this show dearly. and i will always look up to it. this is a wonderful piece of media.</p>
@@ -80,10 +88,10 @@
 			</div>
 
 
-			<div class="show">
+			<div class="log">
 				<div class="box">
 					<img src="!g/kaiba.png" class="cover">
-					<h2 id="kaiba">kaiba</h2>
+					<h3 id="kaiba">kaiba</h3>
 					<p>i decided to watch this one day because i stumbled upon a gif of the opening one day and i just found the art so so so beautiful!</p>
 					<details>
 						<summary>the gif in question</summary><img src="/!g/gif/kaiba.gif" width="80%" alt="gif of the intro of kaiba. has a watercolor style">
@@ -95,10 +103,10 @@
 					<p>watching this was what made me interesting in watching <a href="/masaaki-yuasa/index.html">masaaki yuasa</a>'s other work! it has also been my favorite out of all of them.</p>
 				</div>
 			</div>
-			<div class="show">
+			<div class="log">
 				<div class="box">
 					<img src="!g/twin-peaks.png" class="cover">
-					<h2 id="twin peaks">twin peaks</h2>
+					<h3 id="twin peaks">twin peaks</h3>
 					<p>during april 2023 my girlfriend asked me if i wanted to either watch <i>twin peaks</i> or <i>the haunting of bly manor</i>.</p>
 					<p>i'm gonna get a tiny bit cheesy for a sec but then my girlfriend proceeded to explain to me the general plot of <i>twin peaks</i> and her face kinda lit up because it's one of his favorite TV shows so i went with <i>twin peaks</i></p>
 					<p>i find this show kind of insane tbh. there are some things that haven't aged all that well, but at least i get my giggle or two.</p>
@@ -113,10 +121,10 @@
 					<p><a href="https://www.filmaffinity.com/us/movieimage.php?imageId=892912807" target="_blank">poster credit</a></p>
 				</div>
 			</div>
-			<div class="show">
+			<div class="log">
 				<div class="box">
 					<img src="!g/morel%20orel.png" class="cover" alt="moral orel poster">
-					<h2 id="moral-orel">moral orel</h2>
+					<h3 id="moral-orel">moral orel</h3>
 					<p>this show was such an emotional ride :')</p>
 					<p>despite the show being mostly like a comedy of the lives of these people, i really do like some of the theme this show tackles and how it explores them. i was often feeling really heavy for these characters, specially orel. i grew up in a Very christian enviroment so some of the things discussed in this <b>really</b> got to me in a way. and i get it.</p>
 					<p>which was the reason why my heart was so heavy when i finished watching it. orel i love you so much.</p>
