microblog + updated scrapbook

--- a/doqmeat/microblog/index.html
+++ b/doqmeat/microblog/index.html
@@ -84,6 +84,9 @@
 			<!-- 2025 section -->
 			<section id="y2026">
 				<article>
+					<p><b>06.feb.26 - 11pm</b> life feels so good when you pirate adobe products.</p>
+				</article>
+				<article>
 					<p><b>28.jan.26 - 4pm</b> changed host to <a href="https://nekoweb.com" target="_blank">nekoweb</a>! i'll talk more about it in a journal post but i saw today that they have <a href="https://nekoweb.org/ssi" target="_blank">Server-Side Includes</a> and never in my LIFE have i made a switch faster. this will be life changing. i have a couple of pages that work with iframes so i will be remaking those in the mean time!</p>
 				</article>
 				<article>
